# async-python-sprint-4

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-tests-functional.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: pyproject.toml
core/connections/: app.py  base.py
docker/: python-base.Dockerfile
services/url_shortener/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/url_shortener/src/: main.py
services/url_shortener/src/api/: __init__.py
services/url_shortener/src/api/v1/: __init__.py  url.py
services/url_shortener/src/conf/: constraits.py  exceptions.py  settings.py
services/url_shortener/src/helpers/: exempt_endpoints.py  lifespan.py  middleware.py  wait_for_app.py
services/url_shortener/src/migrations/versions/: 2025_02_09_1549-b847a384fa81_initial_migration.py
services/url_shortener/src/models/: url.py
services/url_shortener/src/repositories/: __init__.py
services/url_shortener/src/schemas/: url.py  user.py
services/url_shortener/src/services/: __init__.py  entity.py  url.py  user.py
services/url_shortener/tests/functional/: docker-compose.yml
services/url_shortener/tests/functional/tests/: test_functional.py  tests_entrypoint.sh
services/url_shortener/tests/integration/src/: test_basic.py
services/url_shortener/tests/integration/src/core/: settings.py
services/url_shortener/tests/integration/src/fixtures/: fixture_basic.py
services/url_shortener/tests/integration/src/helpers/: wait_for_app.py  wait_for_services.py
(+17 files in other folders)
